--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,7 @@
 	version="2.5">
  <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
+        <welcome-file>hello.jsp</welcome-file>
     </welcome-file-list>
     
   	<display-name>Kalrav Admin Dashboard</display-name>
