--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,30 +3,50 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 	      http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
- <welcome-file-list>
+ 	
+ 	<welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
         <welcome-file>hello.jsp</welcome-file>
     </welcome-file-list>
     
   	<display-name>Kalrav Admin Dashboard</display-name>
+  	
 	<servlet>
 		<servlet-name>kalrav</servlet-name>
-		<servlet-class>
-                        org.springframework.web.servlet.DispatcherServlet
-                </servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>kalrav</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	
+	<!-- Load context loader listener -->
+	<listener>
+		<listener-class>
+                   org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+	</listener>
+	
+	
+	<!-- load config files -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/kalrav-servlet.xml</param-value>
 	</context-param>
-	<listener>
-		<listener-class>
-                   org.springframework.web.context.ContextLoaderListener
-                </listener-class>
-	</listener>
+	
+	
+	<!-- Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
