fixed registration users, sql.properties , dao

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
-jdbc.user = kalravdba
-jdbc.password = kal-dba999dev
-jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/kalrav
+jdbc.user=kalravdba
+jdbc.password=kal-dba999dev
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/kalrav?autoReconnect=true
