changed users table, added drama table n layout and added user_grid jsp

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -2,3 +2,6 @@
 
 ##USER
 insert_users=insert into users (auth_id, username, realname, phone, state, city, device, zipcode, company_name, address, location, provenance, birthdate, avg_rating) values (:auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :company_name, :address, :location, :provenance, :birthdate, :avg_rating)
+
+##USER SELECT
+select_users=SELECT * FROM users
