changed user_grid name to  user_listitems and list of user are displayed pending is delete and edit user

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -5,3 +5,5 @@ insert_users=insert into users (auth_id, username, realname, phone, state, city,
 
 ##USER SELECT
 select_users=SELECT * FROM users
+# user delete
+DELETE FROM USERS WHERE id= :id
