fixing database, added user_reviews table

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,7 +1,6 @@
 ##SQL QUERIES###
 
-##USER
+##USER DATABASE QUERIES
 insert_users=insert into users (auth_id, username, realname, phone, state, city, device, zipcode, company_name, address, location, provenance, birthdate, avg_rating) values (:auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :company_name, :address, :location, :provenance, :birthdate, :avg_rating)
+select_users=SELECT  FROM users
 
-##USER SELECT
-select_users=SELECT * FROM users
