--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,13 +1,14 @@
 ##SQL QUERIES###
 
 ##USER DATABASE QUERIES
-insert_users=insert into users (auth_id, username, realname, phone, state, city, device, zipcode, company_name, address, location, provenance, birthdate, avg_rating) values (:auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :company_name, :address, :location, :provenance, :birthdate, :avg_rating)
+insert_users=insert into users (id, auth_id, username, realname, phone, state, city, device, zipcode, company_name, address, location, provenance, birthdate) values (:id, :auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :company_name, :address, :location, :provenance, :birthdate)
 select_users=SELECT  FROM users
 
-<<<<<<< HEAD
-=======
 ##USER SELECT
 select_users=SELECT * FROM users
+
 # user delete
-DELETE FROM USERS WHERE id= :id
->>>>>>> 761dc7066ca711ae6135c006bbcb05e3c78d59a5
+delete_users=DELETE FROM USERS WHERE id= :id
+
+#user with id
+select_users_id=SELECT * FROM users WHERE id= :id
