--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,18 +1,8 @@
 ##SQL QUERIES###
 
-##USER DATABASE QUERIES
+#USER_QUERIES
 insert_users=insert into users (id, auth_id, username, realname, phone, state, city, device, zipcode, company_name, address, location, provenance, birthdate) values (:id, :auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :company_name, :address, :location, :provenance, :birthdate)
-select_users=SELECT  FROM users
-
-##USER SELECT
 select_users=SELECT * FROM users
-
-# user delete
-<<<<<<< Updated upstream
 delete_users=DELETE FROM USERS WHERE id= :id
-
-#user with id
+select_users_exists=SELECT count(username) FROM users WHERE username= :username
 select_users_id=SELECT * FROM users WHERE id= :id
-=======
-DELETE FROM USERS WHERE id= :id
->>>>>>> Stashed changes
