--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,4 +49,10 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!-- adding favicon -->
+	<mime-mapping>
+    <extension>ico</extension>
+    <mime-type>image/x-icon</mime-type>
+	</mime-mapping>
 </web-app>
