--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,18 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+
 
 		<!-- Database c3p0 connection -->
 		<dependency>
@@ -151,7 +163,7 @@
 			<artifactId>c3p0</artifactId>
 			<version>${c3pO.version}</version>
 		</dependency>
-	
+
 
 		<!-- Spring JDBC -->
 		<dependency>
@@ -159,7 +171,7 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- mysql connector- -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -197,6 +209,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-dao</artifactId>
 			<version>2.0.8</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 
 	</dependencies>
