--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 facebook.app.secret=9bafceff468f806462113614167b31f4
 facebook.app.key=1854181264830188
+user_filename=file:src/main/webapp/resources/tables/users.json
+drama_filename=file:src/main/webapp/resources/tables/dramas.json
+adverts_filename=file:src/main/webapp/resources/tables/adds.json
+booking_filename=file:src/main/webapp/resources/tables/booking.json
