All the work done uptil userlist

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -6,3 +6,12 @@ select_users=SELECT * FROM users
 delete_users=DELETE FROM USERS WHERE id= :id
 select_users_exists=SELECT count(username) FROM users WHERE username= :username
 select_users_id=SELECT * FROM users WHERE id= :id
+update_users=update users set auth_id= :auth_id, username= :username, realname= :realname, phone= :phone, state= :state, city= :city, device= :device, zipcode= :zipcode, company_name= :company_name, address= :address, location= :location, provenance= :provenance, birthdate= :birthdate where username= :username
+
+#GROUP_QUERIES 
+insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
+select_groups_all=select * from groups
+select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.id where users_groups.users_id= :user_id
+select_id_bygroupname=select id from groups where group_name= :group_name
+select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
+select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
