made changes to database, added user, add ,delete

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -4,6 +4,7 @@
 insert_users=insert into users (id, auth_id, username, realname, phone, state, city, device, zipcode, company_name, address, location, provenance, birthdate) values (:id, :auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :company_name, :address, :location, :provenance, :birthdate)
 select_users=SELECT * FROM users
 delete_users=DELETE FROM USERS WHERE id= :id
+delete_users_email=DELETE FROM USERS WHERE username= :emailID
 select_users_exists=SELECT count(username) FROM users WHERE username= :username
 select_users_id=SELECT * FROM users WHERE id= :id
 update_users=update users set auth_id= :auth_id, username= :username, realname= :realname, phone= :phone, state= :state, city= :city, device= :device, zipcode= :zipcode, company_name= :company_name, address= :address, location= :location, provenance= :provenance, birthdate= :birthdate where username= :username
