--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,11 @@
 			<version>2.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>4.3.7.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>kalravweb</finalName>
