Done with  drama, auditorium repository, Pending service layer

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -16,3 +16,19 @@ select_groupname_byuserid=select group_name from groups join users_groups on gro
 select_id_bygroupname=select id from groups where group_name= :group_name
 select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
 select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
+
+
+#DRAMA_QUERIES
+insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating) values (:id,:title,:imageurl, :drama_length, :date, genre, :star_cast, :description, :director, :writer, :music, :avg_rating)
+select_dramas=SELECT * FROM dramas
+delete_dramas=DELETE FROM DRAMAS WHERE id= :id
+delete_dramas_title=DELETE FROM DRAMAS WHERE title= :title
+select_dramas_exists=SELECT count(title) FROM dramas WHERE title= :title
+select_dramas_id=SELECT * FROM dramas WHERE id= :id
+update_dramas=update dramas set title= :title, imageurl= :imageurl, drama_length= :drama_length, date= :date, genre= :genre, star_cast= :star_cast, description= :description, director= :director, writer= :writer, music= :music, avg_rating= :avg_rating WHERE id= :id
+
+
+#DRAMA_GROUP_QUERIES 
+select_groupname_bydramaid=select group_name from groups join dramas_groups on groups.id = dramas_groups.id where dramas_groups.dramas_id= :drama_id
+select_dramasbygroups=select dramas.id as dramasId,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id where groups.group_name= :group_name
+select_dramasgroups_all=select dramas.id as dramasId,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id 
