Added Jdbc Repository for drama, Auditorium and implemented all CRUD Added DTO for DramaDTO, AuditoriumDTO and created resultsetExecutor Done With Service layer of DramaService also 'Records are added in database' Done dramaDetail design Added drama_auditoriums table Added mapDramaTable in ObjectMapper Changed the data type for date to  varchar Created DramaTables
Pending the  java scrip for DateTime
Also need to learn how to  upload image on local  server
Need to know delete click  and add button click
Coz on  dramaList when click on  Add button it goes to register page and
i have to  type the url in web "localhost:8080/dramaDetail.jsp"
validation is pending

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -19,13 +19,21 @@ select_usersgroups_all=select users.id as usersId, realname, username, auth_id, 
 
 
 #DRAMA_QUERIES
-insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating) values (:id,:title,:imageurl, :drama_length, :date, genre, :star_cast, :description, :director, :writer, :music, :avg_rating)
+insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating)
 select_dramas=SELECT * FROM dramas
 delete_dramas=DELETE FROM DRAMAS WHERE id= :id
 delete_dramas_title=DELETE FROM DRAMAS WHERE title= :title
 select_dramas_exists=SELECT count(title) FROM dramas WHERE title= :title
 select_dramas_id=SELECT * FROM dramas WHERE id= :id
+select_dramas_title=SELECT * FROM dramas WHERE title= :title
 update_dramas=update dramas set title= :title, imageurl= :imageurl, drama_length= :drama_length, date= :date, genre= :genre, star_cast= :star_cast, description= :description, director= :director, writer= :writer, music= :music, avg_rating= :avg_rating WHERE id= :id
+
+#AUDITORIUM_QUERIES
+insert_auditoriums=insert into auditoriums (id,auditorium_name,address,lat_lon,last_edit) values (:id,:auditorium_name,:address, :lat_lon, :last_edit)
+select_auditoriums=SELECT * FROM auditoriums
+select_auditorium_name_bydramaid=select auditorium_name from auditoriums join dramas_auditoriums on auditoriums.id = dramas_auditoriums.id where dramas_auditoriums.dramas_id= :dramas_id
+select_dramabyauditorium=select dramas.id as dramasId, title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, auditoriums.id as auditoriumsId, auditorium_name from dramas join dramas_auditoriums on dramas.id = dramas_auditoriums.dramas_id join auditoriums on dramas_auditoriums.auditoriums_id = auditoriums.id where auditoriums.auditorium_name= :auditorium_name
+select_dramasauditoriums_all=select dramas.id as dramasId,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, auditoriums.id as auditoriumsId, auditorium_name  from dramas join dramas_auditoriums on dramas.id = dramas_auditoriums.dramas_id join auditoriums on dramas_auditoriums.auditoriums_id = auditoriums.id 
 
 
 #DRAMA_GROUP_QUERIES 
