Drama done with  add, delete, list all  drama and cancel Pending : edit Drama data is not populating in  proper field

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -19,8 +19,9 @@ select_usersgroups_all=select users.id as usersId, realname, username, auth_id, 
 
 
 #DRAMA_QUERIES
+
 insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating)
-select_dramas=SELECT * FROM dramas
+select_dramas=CALL drama_data() 
 delete_dramas=DELETE FROM DRAMAS WHERE id= :id
 delete_dramas_title=DELETE FROM DRAMAS WHERE title= :title
 select_dramas_exists=SELECT count(title) FROM dramas WHERE title= :title
