User CRUD changes

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,4 +1,4 @@
-##SQL QUERIES###
+######SQL QUERIES########
 
 #USER_QUERIES
 insert_users=insert into users (id, auth_id, username, realname, phone, state, city, device, zipcode, company_name, address, location, provenance, birthdate) values (:id, :auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :company_name, :address, :location, :provenance, :birthdate)
@@ -17,6 +17,10 @@ select_id_bygroupname=select id from groups where group_name= :group_name
 select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
 select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
 
+#ROLE_QUERIES 
+insert_users_roles=insert into users_roles(users_id, roles_id) values (:users_id, (select id from roles where role= :role))
+insert_users_roleid=insert into users_roles(users_id, roles_id) values (:users_id, roles_id)
+select_roles_all=select * from roles
 
 #DRAMA_QUERIES
 insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating)
