--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -12,7 +12,7 @@ update_users=update users set auth_id= :auth_id, username= :username, realname= 
 #GROUP_QUERIES 
 insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
 select_groups_all=select * from groups
-select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.id where users_groups.users_id= :user_id
+select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.groups_id where users_groups.users_id= :user_id
 select_id_bygroupname=select id from groups where group_name= :group_name
 select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
 select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
@@ -21,9 +21,9 @@ select_usersgroups_all=select users.id as usersId, realname, username, auth_id, 
 insert_users_roles=insert into users_roles(users_id, roles_id) values (:users_id, (select id from roles where role= :role))
 insert_users_roleid=insert into users_roles(users_id, roles_id) values (:users_id, roles_id)
 select_roles_all=select * from roles
+select_role_byuserid=select role from roles join users_roles on roles.id = users_roles.roles_id where users_roles.users_id= :user_id
 
 #DRAMA_QUERIES
-
 insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating)
 select_dramas=CALL drama_data() 
 delete_dramas=DELETE FROM DRAMAS WHERE id= :id
