--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,11 @@
 			<artifactId>spring-aop</artifactId>
 			<version>4.3.7.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>kalravweb</finalName>
