--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -11,8 +11,9 @@ update_users=update users set auth_id= :auth_id, username= :username, realname= 
 
 #GROUP_QUERIES 
 insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
+insert_dramas_groups=insert into dramas_groups(dramas_id, groups_id) values (:dramas_id, (select id from groups where group_name= :group_name))
 select_groups_all=select * from groups
-select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.groups_id where users_groups.users_id= :user_id
+select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.id where users_groups.users_id= :user_id
 select_id_bygroupname=select id from groups where group_name= :group_name
 select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
 select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
@@ -24,6 +25,7 @@ select_roles_all=select * from roles
 select_role_byuserid=select role from roles join users_roles on roles.id = users_roles.roles_id where users_roles.users_id= :user_id
 
 #DRAMA_QUERIES
+
 insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating)
 select_dramas=CALL drama_data() 
 delete_dramas=DELETE FROM DRAMAS WHERE id= :id
@@ -34,6 +36,7 @@ select_dramas_title=SELECT * FROM dramas WHERE title= :title
 update_dramas=update dramas set title= :title, imageurl= :imageurl, drama_length= :drama_length, date= :date, genre= :genre, star_cast= :star_cast, description= :description, director= :director, writer= :writer, music= :music, avg_rating= :avg_rating WHERE id= :id
 
 #AUDITORIUM_QUERIES
+insert_dramas_auditoriums=insert into dramas_auditoriums(dramas_id, auditoriums_id) values (:dramas_id, (select id from auditoriums where auditorium_name= :auditorium_name))
 insert_auditoriums=insert into auditoriums (id,auditorium_name,address,lat_lon,last_edit) values (:id,:auditorium_name,:address, :lat_lon, :last_edit)
 select_auditoriums=SELECT * FROM auditoriums
 select_auditorium_name_bydramaid=select auditorium_name from auditoriums join dramas_auditoriums on auditoriums.id = dramas_auditoriums.id where dramas_auditoriums.dramas_id= :dramas_id
