--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ local.properties
 .classpath
 .settings/
 .loadpath
-src/main/webapp/tables/**
+src/main/webapp/tables/
 # External tool builders
 .externalToolBuilders/
 
