Rest API - USER Add, ListofAll, Update , delete, find Rest API -DRAMA List, create REST ANDROID USER Done Drama in process

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -51,5 +51,5 @@ select_dramasauditoriums_all=select dramas.id as dramasId,title,imageurl, drama_
 
 #DRAMA_GROUP_QUERIES 
 select_groupname_bydramaid=select group_name from groups join dramas_groups on groups.id = dramas_groups.id where dramas_groups.dramas_id= :drama_id
-select_dramasbygroups=select dramas.id as dramasId,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id where groups.group_name= :group_name
-select_dramasgroups_all=select dramas.id as dramasId,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id 
+select_dramasbygroups=select dramas.id as dramasId,title,imageurl, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id where groups.group_name= :group_name
+select_dramasgroups_all=select dramas.id as dramasId,title,imageurl, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id 
