Database changes in  dramas table, conflict in user already exist

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -7,6 +7,7 @@ delete_users=DELETE FROM USERS WHERE id= :id
 delete_users_email=DELETE FROM USERS WHERE username= :emailID
 select_users_exists=SELECT count(username) FROM users WHERE username= :username
 select_users_id=SELECT * FROM users WHERE id= :id
+select_users_username=SELECT * FROM users WHERE username= :username
 update_users=update users set auth_id= :auth_id, username= :username, realname= :realname, phone= :phone, state= :state, city= :city, device= :device, zipcode= :zipcode, company_name= :company_name, address= :address, location= :location, provenance= :provenance, birthdate= :birthdate, notification= :notification, enabled= :enabled where username= :username
 
 #GROUP_QUERIES 
@@ -15,7 +16,7 @@ insert_groups=insert into groups (id, group_name) values (:id, :group_name)
 insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
 insert_dramas_groups=insert into dramas_groups(dramas_id, groups_id) values (:dramas_id, (select id from groups where group_name= :group_name))
 select_groups_all=select * from groups
-select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.groups_id where users_groups.users_id= :user_id
+select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.groups_id where users_groups.users_id= :users_id
 select_id_bygroupname=select id from groups where group_name= :group_name
 select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
 select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
@@ -27,18 +28,18 @@ insert_subgroups_groups=insert into sub_groups(groups_id, sub_group_name) values
 insert_users_roles=insert into users_roles(users_id, roles_id) values (:users_id, (select id from roles where role= :role))
 insert_users_roleid=insert into users_roles(users_id, roles_id) values (:users_id, roles_id)
 select_roles_all=select * from roles
-select_role_byuserid=select role from roles join users_roles on roles.id = users_roles.roles_id where users_roles.users_id= :user_id
+select_role_byuserid=select role from roles join users_roles on roles.id = users_roles.roles_id where users_roles.users_id= :users_id
 
 #DRAMA_QUERIES
 
-insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating)
+insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating,drama_language) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating, :drama_language)
 select_dramas=CALL drama_data() 
 delete_dramas=DELETE FROM DRAMAS WHERE id= :id
 delete_dramas_title=DELETE FROM DRAMAS WHERE title= :title
 select_dramas_exists=SELECT count(title) FROM dramas WHERE title= :title
 select_dramas_id=SELECT * FROM dramas WHERE id= :id
 select_dramas_title=SELECT * FROM dramas WHERE title= :title
-update_dramas=update dramas set title= :title, imageurl= :imageurl, drama_length= :drama_length, date= :date, genre= :genre, star_cast= :star_cast, description= :description, director= :director, writer= :writer, music= :music, avg_rating= :avg_rating WHERE id= :id
+update_dramas=update dramas set title= :title, imageurl= :imageurl, drama_length= :drama_length, date= :date, genre= :genre, star_cast= :star_cast, description= :description, director= :director, writer= :writer, music= :music, avg_rating= :avg_rating, drama_language= :drama_language WHERE id= :id
 
 #AUDITORIUM_QUERIES
 insert_dramas_auditoriums=insert into dramas_auditoriums(dramas_id, auditoriums_id) values (:dramas_id, (select id from auditoriums where auditorium_name= :auditorium_name))
