--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -1,14 +1,14 @@
 ######SQL QUERIES########
 
 #USER_QUERIES
-insert_users=insert into users (id, auth_id, username, realname, phone, state, city, device, zipcode, company_name, address, location, provenance, birthdate) values (:id, :auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :company_name, :address, :location, :provenance, :birthdate)
+insert_users=insert into users (id, auth_id, username, realname, phone, state, city, device, zipcode, address, provenance, birthdate) values (:id, :auth_id, :username, :realname, :phone, :state, :city, :device, :zipcode, :address, :provenance, :birthdate)
 select_users=SELECT * FROM users
 delete_users=DELETE FROM USERS WHERE id= :id
 delete_users_email=DELETE FROM USERS WHERE username= :emailID
 select_users_exists=SELECT count(username) FROM users WHERE username= :username
 select_users_id=SELECT * FROM users WHERE id= :id
 select_users_username=SELECT * FROM users WHERE username= :username
-update_users=update users set auth_id= :auth_id, username= :username, realname= :realname, phone= :phone, state= :state, city= :city, device= :device, zipcode= :zipcode, company_name= :company_name, address= :address, location= :location, provenance= :provenance, birthdate= :birthdate, notification= :notification, enabled= :enabled where username= :username
+update_users=update users set auth_id= :auth_id, username= :username, realname= :realname, phone= :phone, state= :state, city= :city, device= :device, zipcode= :zipcode, address= :address, provenance= :provenance, birthdate= :birthdate, notification= :notification, enabled= :enabled where username= :username
 
 #GROUP_QUERIES 
 insert_groups=insert into groups (id, group_name) values (:id, :group_name)
@@ -18,8 +18,8 @@ insert_dramas_groups=insert into dramas_groups(dramas_id, groups_id) values (:dr
 select_groups_all=select * from groups
 select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.groups_id where users_groups.users_id= :users_id
 select_id_bygroupname=select id from groups where group_name= :group_name
-select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
-select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, location, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, company_name, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
+select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode,  groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
+select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
 select_groups_exists=SELECT count(group_name) FROM groups WHERE group_name= :group_name
 insert_subgroups_groups=insert into sub_groups(groups_id, sub_group_name) values (:groups_id, (select id from groups where group_name= :group_name))
 
