Added UserRestController Exception Handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ user_filename=file:src/main/webapp/resources/tables/users.json
 drama_filename=file:src/main/webapp/resources/tables/dramas.json
 adverts_filename=file:src/main/webapp/resources/tables/adds.json
 booking_filename=file:src/main/webapp/resources/tables/booking.json
+
+#REST JSON Response Messages
+response_userempty={"msg":"User Not Found", "statusCode" : 404}
+response_userinvalid={"msg": "Username Invalid", "statusCode" : 400}
+
+
+#Exception Messages
+exception_userinvalid=Username Invalid
+exception_userempty=User Not Found
