Working on User Service module

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -8,30 +8,30 @@ delete_users_email=DELETE FROM USERS WHERE username= :emailID
 select_users_exists=SELECT count(username) FROM users WHERE username= :username
 select_users_id=SELECT * FROM users WHERE id= :id
 select_users_username=SELECT * FROM users WHERE username= :username
-update_users=update users set auth_id= :auth_id, username= :username, realname= :realname, phone= :phone, state= :state, city= :city, device= :device, zipcode= :zipcode, address= :address, provenance= :provenance, birthdate= :birthdate, notification= :notification, enabled= :enabled where username= :username
+update_users=update users set realname= :realname, phone= :phone, state= :state, city= :city,  zipcode= :zipcode, address= :address, notification= :notification, enabled= :enabled where username= :username
 
 #GROUP_QUERIES 
-insert_groups=insert into groups (id, group_name) values (:id, :group_name)
-
-insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
-insert_dramas_groups=insert into dramas_groups(dramas_id, groups_id) values (:dramas_id, (select id from groups where group_name= :group_name))
 select_groups_all=select * from groups
+insert_groups=insert into groups (id, group_name) values (:id, :group_name)
+insert_user_groups=insert into users_groups(users_id, groups_id) values (:users_id, (select id from groups where group_name= :group_name))
 select_groupname_byuserid=select group_name from groups join users_groups on groups.id = users_groups.groups_id where users_groups.users_id= :users_id
 select_id_bygroupname=select id from groups where group_name= :group_name
 select_usersbygroups=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode,  groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id where groups.group_name= :group_name
 select_usersgroups_all=select users.id as usersId, realname, username, auth_id, phone, provenance, birthdate, enabled, notification, device, address, city, state, zipcode, groups.id as groupsId, group_name  from users join users_groups on users.id = users_groups.users_id join groups on users_groups.groups_id = groups.id
 select_groups_exists=SELECT count(group_name) FROM groups WHERE group_name= :group_name
 insert_subgroups_groups=insert into sub_groups(groups_id, sub_group_name) values (:groups_id, (select id from groups where group_name= :group_name))
-
+insert_dramas_groups=insert into dramas_groups(dramas_id, groups_id) values (:dramas_id, (select id from groups where group_name= :group_name))
+update_group_byuser=update users inner join users_groups on users_groups.users_id = users.id set users_groups.groups_id = (select id from groups where group_name= :group_name) where users.username= :username
+select_subgroup_bygroup=select sub_groups_name from sub_groups where group_id in (select id from groups where group_name= :group_name)
 
 #ROLE_QUERIES 
 insert_users_roles=insert into users_roles(users_id, roles_id) values (:users_id, (select id from roles where role= :role))
 insert_users_roleid=insert into users_roles(users_id, roles_id) values (:users_id, roles_id)
 select_roles_all=select * from roles
 select_role_byuserid=select role from roles join users_roles on roles.id = users_roles.roles_id where users_roles.users_id= :users_id
+update_roles_byuser=update users inner join users_roles on users_roles.users_id = users.id  set users_roles.roles_id = (select id from roles where role= :role) where users.username= :username
 
 #DRAMA_QUERIES
-
 insert_dramas=insert into dramas (id,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating,drama_language) values (:id,:title,:imageurl, :drama_length, :date, :genre, :star_cast, :description, :director, :writer, :music, :avg_rating, :drama_language)
 select_dramas=CALL drama_data() 
 delete_dramas=DELETE FROM DRAMAS WHERE id= :id
