--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,11 @@
 			<artifactId>javassist</artifactId>
 			<version>3.7.ga</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-surefire-plugin</artifactId>
+		    <version>2.20</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>kalravweb</finalName>
