Notification add, list all,edit done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ user_filename=file:src/main/webapp/resources/tables/users.json
 drama_filename=file:src/main/webapp/resources/tables/dramas.json
 adverts_filename=file:src/main/webapp/resources/tables/adds.json
 booking_filename=file:src/main/webapp/resources/tables/booking.json
+notification_filename=file:src/main/webapp/resources/tables/notification.json
 
 #REST JSON Response Messages
 response_userempty={"msg":"User Not Found", "statusCode" : 404}
