--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -38,6 +38,7 @@ delete_dramas_title=DELETE FROM DRAMAS WHERE title= :title
 select_dramas_exists=SELECT count(title) FROM dramas WHERE title= :title
 select_dramas_id=SELECT * FROM dramas WHERE id= :id
 select_dramas_title=SELECT * FROM dramas WHERE title= :title
+select_all_dramas=SELECT * FROM dramas 
 update_dramas=update dramas set title= :title, imageurl= :imageurl, drama_length= :drama_length, date= :date, genre= :genre, star_cast= :star_cast, description= :description, director= :director, writer= :writer, music= :music, avg_rating= :avg_rating, drama_language= :drama_language WHERE id= :id
 
 #AUDITORIUM_QUERIES
@@ -67,3 +68,29 @@ select_dramasgroups_all=select dramas.id as dramasId,title,imageurl, groups.id a
 
 select_ratings_exists=SELECT count(id) FROM ratings WHERE users_id= :users_id and dramas_id= :dramas_id
 insert_ratings=insert into ratings (id,rating,rating_date,users_id,dramas_id) values (:id,:rating,:rating_date,:users_id,:dramas_id)
+
+
+#NOTIFICATION_QUERIES
+#insert_notification=insert into notifications(id,notify,message) values (:id, (select id from users where realname= :realname),(select id from dramas where title= :title),:notify,:message)
+
+insert_notification=insert into notifications(id,notify,message) values (:id,:notify,:message)
+select_notification=select id,notify,message from notifications
+select_notification_message=select id,notify,message from notifications where message=:message
+delete_notification=DELETE FROM notification WHERE message= :message
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
