done with notification

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -73,10 +73,10 @@ insert_ratings=insert into ratings (id,rating,rating_date,users_id,dramas_id) va
 #NOTIFICATION_QUERIES
 #insert_notification=insert into notifications(id,notify,message) values (:id, (select id from users where realname= :realname),(select id from dramas where title= :title),:notify,:message)
 
-insert_notification=insert into notifications(id,notify,message) values (:id,:notify,:message)
-select_notification=select id,notify,message from notifications
-select_notification_message=select id,notify,message from notifications where message=:message
-delete_notification=DELETE FROM notification WHERE message= :message
+insert_notification=insert into notifications(id,notify,message,userId,dramaId,realname,dramaTitle) values (:id,:notify,:message,:userId,:dramaId,:realname,:dramaTitle)
+select_notification=select id,notify,message,realname,dramaTitle from notifications
+select_notification_message=select * from notifications where message=:message
+delete_notification=DELETE FROM notifications WHERE message= :message
 
 
 
