Made changes in Rating and Notification

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -68,6 +68,9 @@ select_dramasgroups_all=select dramas.id as dramasId,title,imageurl, groups.id a
 
 select_ratings_exists=SELECT count(id) FROM ratings WHERE users_id= :users_id and dramas_id= :dramas_id
 insert_ratings=insert into ratings (id,rating,rating_date,users_id,dramas_id) values (:id,:rating,:rating_date,:users_id,:dramas_id)
+select_users_id_and_dramas_id=select * from ratings where users_id=:users_id and dramas_id=:dramas_id
+update_ratings=update ratings set rating= :rating, rating_date= :rating_date, users_id= :users_id WHERE id= :id
+
 
 
 #NOTIFICATION_QUERIES
