Still working on auditorium list with price

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -46,13 +46,7 @@ insert_dramas_auditoriums=insert into dramas_auditoriums(dramas_id, auditoriums_
 insert_auditoriums=insert into auditoriums (id,auditorium_name,address,latitude,longitude) values (:id,:auditorium_name,:address, :latitude, :longitude)
 select_auditoriums=SELECT * FROM auditoriums
 #select_auditorium_name_bydramaid=select auditorium_name from auditoriums join dramas_auditoriums on auditoriums.id = dramas_auditoriums.id where dramas_auditoriums.dramas_id= :dramas_id
-select_auditorium_name_bydramaid=select dramas_auditoriums.auditoriums_id,auditorium_name,dramas_auditoriums.date,dramas_auditoriums.time, auditoriums_price.price,auditoriums_price.istart,auditoriums_price.iend 
-from auditoriums
-join dramas_auditoriums 
-on auditoriums.id = dramas_auditoriums.auditoriums_id 
-join auditoriums_price 
-on dramas_auditoriums.id = auditoriums_price.auditoriums_id 
-where dramas_auditoriums.dramas_id=:dramas_id
+select_auditorium_name_bydramaid=select auditoriums.id,auditorium_name,dramas_auditoriums.date,dramas_auditoriums.time, auditoriums_price.price,auditoriums_price.istart,auditoriums_price.iend from auditoriums join dramas_auditoriums on auditoriums.id = dramas_auditoriums.auditoriums_id  join auditoriums_price on dramas_auditoriums.id = auditoriums_price.auditoriums_id where dramas_auditoriums.dramas_id=:dramas_id;
 
 select_dramabyauditorium=select dramas.id as dramasId, title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, auditoriums.id as auditoriumsId, auditorium_name from dramas join dramas_auditoriums on dramas.id = dramas_auditoriums.dramas_id join auditoriums on dramas_auditoriums.auditoriums_id = auditoriums.id where auditoriums.auditorium_name= :auditorium_name
 select_dramasauditoriums_all=select dramas.id as dramasId,title,imageurl, drama_length, date, genre, star_cast, description, director, writer, music, avg_rating, auditoriums.id as auditoriumsId, auditorium_name  from dramas join dramas_auditoriums on dramas.id = dramas_auditoriums.dramas_id join auditoriums on dramas_auditoriums.auditoriums_id = auditoriums.id 
