monika's changes commit for device and notification

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -61,7 +61,6 @@ select_dramasbygroups=select dramas.id as dramasId,title,imageurl, groups.id as 
 select_dramasgroups_all=select dramas.id as dramasId,title,imageurl, groups.id as groupsId, group_name  from dramas join dramas_groups on dramas.id = dramas_groups.dramas_id join groups on dramas_groups.groups_id = groups.id 
 
 #RATING_QUERY
-
 select_ratings_exists=SELECT count(id) FROM ratings WHERE users_id= :users_id and dramas_id= :dramas_id
 insert_ratings=insert into ratings (id,rating,rating_date,users_id,dramas_id) values (:id,:rating,:rating_date,:users_id,:dramas_id)
 select_users_id_and_dramas_id=select * from ratings where users_id=:users_id and dramas_id=:dramas_id
@@ -70,8 +69,6 @@ update_ratings=update ratings set rating= :rating, rating_date= :rating_date, us
 
 
 #NOTIFICATION_QUERIES
-#insert_notification=insert into notifications(id,notify,message) values (:id, (select id from users where realname= :realname),(select id from dramas where title= :title),:notify,:message)
-
 insert_notification=insert into notifications(id,notify,message,userId,dramaId,realname,dramaTitle) values (:id,:notify,:message,:userId,:dramaId,:realname,:dramaTitle)
 select_notification=select id,notify,message,realname,dramaTitle from notifications
 select_notification_message=select * from notifications where message=:message
@@ -82,6 +79,12 @@ insert_rowseat=insert into row_seat(row_num, row_name, seat_num, auditoriums_id)
 
 
 
+
+#DEVICE_QUERIES
+insert_devices=insert into devices(id,deviceToken) values (:id,:deviceToken)
+select_devices_exists=select id,deviceToken from devices where deviceToken=:deviceToken
+select_notification_message=select * from devices where message=:message
+update_devices=update devices set deviceToken= :deviceToken  WHERE id= :id
 
 
 
