--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,12 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
+			 <exclusions>
+        <exclusion>
+            <artifactId>hamcrest-core</artifactId>
+            <groupId>org.hamcrest</groupId>
+        </exclusion>
+    </exclusions>
 		</dependency>
 
 		<!-- mongodb java driver -->
@@ -275,6 +281,31 @@
 		    <artifactId>maven-surefire-plugin</artifactId>
 		    <version>2.20</version>
 		</dependency>
+		<dependency>
+    <groupId>org.hamcrest</groupId>
+    <artifactId>hamcrest-all</artifactId>
+    <version>1.3</version>
+    <scope>test</scope>
+    
+</dependency>
+	<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>1.9.5</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>com.jayway.jsonpath</groupId>
+    <artifactId>json-path</artifactId>
+    <version>0.8.1</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>com.jayway.jsonpath</groupId>
+    <artifactId>json-path-assert</artifactId>
+    <version>0.8.1</version>
+    <scope>test</scope>
+</dependency>
 	</dependencies>
 	<build>
 		<finalName>kalravweb</finalName>
