Monika made change in restDeviceController and RestUSerController

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -81,8 +81,8 @@ insert_rowseat=insert into row_seat(row_num, row_name, seat_num, auditoriums_id)
 
 
 #DEVICE_QUERIES
-insert_devices=insert into devices(id,deviceToken) values (:id,:deviceToken)
-select_devices_exists=select id,deviceToken from devices where deviceToken=:deviceToken
+insert_devices=insert into devices(deviceToken) values (:deviceToken)
+select_devices_exists=select  count(deviceToken) from devices where deviceToken=:deviceToken
 select_notification_message=select * from devices where message=:message
 update_devices=update devices set deviceToken= :deviceToken  WHERE id= :id
 
