--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -81,10 +81,10 @@ insert_rowseat=insert into row_seat(row_num, row_name, seat_num, auditoriums_id)
 
 
 #DEVICE_QUERIES
-insert_devices=insert into devices(deviceToken) values (:deviceToken)
+insert_user_devices=insert into devices(users_id,deviceToken) values (:users_id,:deviceToken)
 select_devices_exists=select  count(deviceToken) from devices where deviceToken=:deviceToken
-select_notification_message=select * from devices where message=:message
-update_devices=update devices set deviceToken= :deviceToken  WHERE id= :id
+select_all_devices=select * from devices
+update_devices=update devices set deviceToken= :deviceToken  WHERE users_id= :users_id
 
 
 
