1. created testdata for notification and added notification  delete and edit button is disabled

--- a/src/main/resources/sql.properties
+++ b/src/main/resources/sql.properties
@@ -70,9 +70,10 @@ update_ratings=update ratings set rating= :rating, rating_date= :rating_date, us
 
 #NOTIFICATION_QUERIES
 insert_notification=insert into notifications(id,notify,message,userId,dramaId,realname,dramaTitle) values (:id,:notify,:message,:userId,:dramaId,:realname,:dramaTitle)
-select_notification=select id,notify,message,realname,dramaTitle from notifications
+select_notification=select id,notify,message,realname,dramaTitle from notifications order by id DESC
 select_notification_message=select * from notifications where message=:message
 delete_notification=DELETE FROM notifications WHERE message= :message
+delete_notification_by_id=DELETE FROM notifications WHERE id= :id order by id ASC
 
 #ROW_SEAT QUERIES
 insert_rowseat=insert into row_seat(row_num, row_name, seat_num, auditoriums_id) values (:row_num, :row_name, :seat_num, :auditoriums_id)
